[package]
name = "revenant"
version = "0.1.0"
edition = "2021"

[lib]
name = "revenant"
path = "src/lib.rs"

[[bin]]
name = "revenant"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
# pinned to 0.39 — API changed significantly in 0.37+; do not upgrade without testing
quick-xml = { version = "0.39", features = ["async-tokio"] }
mlua = { version = "0.10", features = ["lua54", "async", "send", "vendored"] }
rusqlite = { version = "0.32", features = ["bundled"] }
tokio-rustls = "0.26"
rustls-pemfile = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
thiserror = "2"
clap = { version = "4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
bytes = "1"
notify = "6"

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3"
